[gd_scene load_steps=101 format=3 uid="uid://ca77xugd1pv68"]

[ext_resource type="Script" path="res://scripts/main_character.gd" id="1_idbvf"]
[ext_resource type="Texture2D" uid="uid://4u5tgopy6dee" path="res://assets/characters/MainIdle1.png" id="2_qf3xm"]
[ext_resource type="PackedScene" uid="uid://b2dudclwg0tq4" path="res://scenes/ghosting.tscn" id="2_t3nhb"]
[ext_resource type="PackedScene" uid="uid://cj7mqjgb1p12a" path="res://scenes/level_tilemap.tscn" id="3_cwoon"]
[ext_resource type="Texture2D" uid="uid://b36d25xrkv610" path="res://assets/characters/mainRun1.png" id="4_8165s"]
[ext_resource type="Shader" path="res://scenes/main_character.gdshader" id="5_bmm5j"]
[ext_resource type="AudioStream" uid="uid://bnu16pkiyebj1" path="res://assets/sounds/Retro FootStep Mud 01.wav" id="6_7ccnb"]
[ext_resource type="Texture2D" uid="uid://dan7de1b85gr4" path="res://assets/characters/MainWallSlide1.png" id="6_t5m81"]
[ext_resource type="AudioStream" uid="uid://bd4x7cgps2rfy" path="res://assets/sounds/Retro Jump Simple A 01.wav" id="7_3mb26"]
[ext_resource type="AudioStream" uid="uid://gc05qwpmpq03" path="res://assets/sounds/Retro Swooosh 16.wav" id="7_s7pt2"]
[ext_resource type="AudioStream" uid="uid://cohba1vrvmn6n" path="res://assets/sounds/107625__stintx__running03.wav" id="8_malfi"]
[ext_resource type="Texture2D" uid="uid://duv4ot7ndlooi" path="res://assets/characters/balljump.png" id="9_nht7a"]
[ext_resource type="Texture2D" uid="uid://wr2ji5gve1c1" path="res://assets/characters/testrun.png" id="9_omwhy"]
[ext_resource type="PackedScene" uid="uid://nnpxof2np4tc" path="res://scenes/blue_fire.tscn" id="10_egdxp"]
[ext_resource type="PackedScene" uid="uid://cjmxxny73dcnr" path="res://scenes/landing.tscn" id="10_q2yko"]
[ext_resource type="Texture2D" uid="uid://d24au8m3m77av" path="res://assets/textures/32x32_Arcane_0.png" id="11_gqogc"]
[ext_resource type="FontFile" uid="uid://coynlacfh80fp" path="res://assets/UI/Alkhemikal.ttf" id="12_0cawj"]
[ext_resource type="Theme" uid="uid://bn5331o8qs7n2" path="res://assets/default_theme.tres" id="12_p4byo"]
[ext_resource type="Shader" path="res://scenes/main_characterlight.gdshader" id="13_m6yv1"]
[ext_resource type="Texture2D" uid="uid://ctlumstmnooha" path="res://assets/textures/16x16_FX_6.png" id="14_qqhoh"]
[ext_resource type="Script" path="res://scripts/CountTimer1.gd" id="19_d6q0b"]
[ext_resource type="Texture2D" uid="uid://m1l6kc8im08s" path="res://assets/textures/GUI.png" id="19_dibx0"]

[sub_resource type="Curve" id="Curve_5afw1"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0.008, 266.85), 0.0, 0.0, 0, 0, Vector2(0.992, -150.721), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_5lgap"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0.00399999, 167.879), 0.0, 0.0, 0, 0, Vector2(0.984, -200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_jmcir"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0.0222222, 200), 0.0, 0.0, 0, 0, Vector2(1, -137.268), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_sjosl"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 340.728), 0.0, 0.0, 0, 0, Vector2(0.984, -108.964), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_2o5ga"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_o236b"]
offsets = PackedFloat32Array(0, 0.976945)
colors = PackedColorArray(0.819772, 0.810654, 0.938815, 1, 0.117192, 0.435327, 0.999999, 1)

[sub_resource type="Curve" id="Curve_h1iie"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -0.688312), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fnmef"]
shader = ExtResource("5_bmm5j")

[sub_resource type="AtlasTexture" id="AtlasTexture_ulvw5"]
atlas = ExtResource("2_qf3xm")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_arqlm"]
atlas = ExtResource("2_qf3xm")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_771y1"]
atlas = ExtResource("2_qf3xm")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b8or"]
atlas = ExtResource("2_qf3xm")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1h1c"]
atlas = ExtResource("2_qf3xm")
region = Rect2(960, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_54ye1"]
atlas = ExtResource("2_qf3xm")
region = Rect2(1200, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj6ya"]
atlas = ExtResource("2_qf3xm")
region = Rect2(1440, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hibvk"]
atlas = ExtResource("9_omwhy")
region = Rect2(0, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bqjh"]
atlas = ExtResource("9_omwhy")
region = Rect2(340, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7y5v"]
atlas = ExtResource("9_omwhy")
region = Rect2(680, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_okm81"]
atlas = ExtResource("9_omwhy")
region = Rect2(1020, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmw60"]
atlas = ExtResource("9_omwhy")
region = Rect2(1360, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjj40"]
atlas = ExtResource("9_omwhy")
region = Rect2(0, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r23c"]
atlas = ExtResource("9_omwhy")
region = Rect2(340, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnvmd"]
atlas = ExtResource("9_omwhy")
region = Rect2(680, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_5usyg"]
atlas = ExtResource("9_omwhy")
region = Rect2(1020, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhvs"]
atlas = ExtResource("9_omwhy")
region = Rect2(1360, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb44c"]
atlas = ExtResource("6_t5m81")
region = Rect2(0, 0, 336, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd1gy"]
atlas = ExtResource("6_t5m81")
region = Rect2(336, 0, 336, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx2h3"]
atlas = ExtResource("6_t5m81")
region = Rect2(672, 0, 336, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltlxi"]
atlas = ExtResource("6_t5m81")
region = Rect2(1008, 0, 336, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_186nl"]
atlas = ExtResource("6_t5m81")
region = Rect2(1344, 0, 336, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_aprac"]
atlas = ExtResource("9_nht7a")
region = Rect2(0, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd63p"]
atlas = ExtResource("9_nht7a")
region = Rect2(340, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ge1s"]
atlas = ExtResource("9_nht7a")
region = Rect2(680, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_vddo3"]
atlas = ExtResource("9_nht7a")
region = Rect2(1020, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxryo"]
atlas = ExtResource("9_nht7a")
region = Rect2(1360, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cgfe"]
atlas = ExtResource("9_nht7a")
region = Rect2(1700, 0, 340, 260)

[sub_resource type="AtlasTexture" id="AtlasTexture_laspd"]
atlas = ExtResource("4_8165s")
region = Rect2(0, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk1up"]
atlas = ExtResource("4_8165s")
region = Rect2(340, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke43s"]
atlas = ExtResource("4_8165s")
region = Rect2(680, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev0ix"]
atlas = ExtResource("4_8165s")
region = Rect2(1020, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_72scs"]
atlas = ExtResource("4_8165s")
region = Rect2(1360, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dchr"]
atlas = ExtResource("4_8165s")
region = Rect2(1700, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpiqw"]
atlas = ExtResource("4_8165s")
region = Rect2(2040, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rel1k"]
atlas = ExtResource("4_8165s")
region = Rect2(2380, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5k1k"]
atlas = ExtResource("4_8165s")
region = Rect2(2720, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lokv"]
atlas = ExtResource("4_8165s")
region = Rect2(3060, 0, 340, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulu8b"]
atlas = ExtResource("4_8165s")
region = Rect2(3400, 0, 340, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_1at15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulvw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arqlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_771y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b8or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1h1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54ye1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj6ya")
}],
"loop": true,
"name": &"MainIdle1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hibvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bqjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7y5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okm81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmw60")
}],
"loop": true,
"name": &"Mainjump1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjj40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r23c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnvmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5usyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhvs")
}],
"loop": false,
"name": &"Mainjumping",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb44c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx2h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltlxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_186nl")
}],
"loop": true,
"name": &"WallSlide",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aprac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd63p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ge1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vddo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxryo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cgfe")
}],
"loop": true,
"name": &"balljump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_laspd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk1up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke43s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev0ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72scs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dchr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpiqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rel1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5k1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lokv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulu8b")
}],
"loop": true,
"name": &"mainRun",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xe23g"]
shader = ExtResource("13_m6yv1")
shader_parameter/lod = 0.0

[sub_resource type="Curve" id="Curve_ts3df"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0.02, 247.577), 0.0, 0.0, 0, 0, Vector2(0.984, -141.084), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_qq81f"]
_data = [Vector2(0, 0.879547), 0.0, 0.0, 0, 0, Vector2(0.948, 0.201441), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_sv1nf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.279306), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_mmbfy"]
colors = PackedColorArray(0.201526, 0.201527, 0.201526, 1, 0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_oodre"]
min_value = -1.0
_data = [Vector2(0.00249377, 0.862463), 0.0, 0.0, 0, 0, Vector2(0.950125, -0.0562844), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_cblcq"]
font_size = 100

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8cco3"]
radius = 14.0
height = 48.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdx1e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.988957, 0.988957, 0.988957, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5omo"]
bg_color = Color(0.216222, 0.520454, 0.773165, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Gradient" id="Gradient_8jtfg"]
offsets = PackedFloat32Array(0.0172414, 1)
colors = PackedColorArray(0.832474, 0.832474, 0.832474, 1, 0.847474, 0.847474, 0.847474, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rj2gl"]
gradient = SubResource("Gradient_8jtfg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2o3it"]
bg_color = Color(0.106759, 0.0371176, 0.0383998, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_op7cu"]
bg_color = Color(0.368, 0.198, 0.202, 0.737)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Animation" id="Animation_ca7aj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2, 2, 2, 1)]
}

[sub_resource type="Animation" id="Animation_j326m"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0174603, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(2, 2, 2, 1), Color(2, 2, 2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vdns"]
_data = {
"RESET": SubResource("Animation_ca7aj"),
"fade_out": SubResource("Animation_j326m")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lcjif"]
atlas = ExtResource("2_qf3xm")
region = Rect2(0, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbjxg"]
atlas = ExtResource("2_qf3xm")
region = Rect2(240, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_g361v"]
atlas = ExtResource("2_qf3xm")
region = Rect2(480, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdx1t"]
atlas = ExtResource("2_qf3xm")
region = Rect2(720, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_dosmv"]
atlas = ExtResource("2_qf3xm")
region = Rect2(960, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyfxh"]
atlas = ExtResource("2_qf3xm")
region = Rect2(1200, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iqgf"]
atlas = ExtResource("2_qf3xm")
region = Rect2(1440, 0, 240, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pc4"]
atlas = ExtResource("2_qf3xm")
region = Rect2(1680, 0, 240, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_7yqkk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcjif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbjxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g361v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdx1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dosmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyfxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iqgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pc4")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b8kdt"]
texture = ExtResource("19_dibx0")
region_rect = Rect2(50, 34, 44, 12)
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vf8mi"]
font = ExtResource("12_0cawj")
font_size = 50

[sub_resource type="Gradient" id="Gradient_na0f8"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pd46p"]
gradient = SubResource("Gradient_na0f8")

[node name="mainCharacter" type="CharacterBody2D" groups=["player"]]
modulate = Color(2, 2, 2, 1)
z_index = 23
texture_filter = 1
floor_constant_speed = true
floor_snap_length = 2.0
script = ExtResource("1_idbvf")
ghost_node = ExtResource("2_t3nhb")

[node name="levelTilemap" parent="." instance=ExtResource("3_cwoon")]

[node name="flip" type="Node2D" parent="."]

[node name="blue_fire2" parent="flip" instance=ExtResource("10_egdxp")]
position = Vector2(14, 50)

[node name="trail" type="CPUParticles2D" parent="flip"]
modulate = Color(1, 1, 1, 0.74902)
texture_filter = 1
position = Vector2(-29, -4)
scale = Vector2(2.53802, 0.138738)
emitting = false
amount = 150
lifetime = 0.6
one_shot = true
explosiveness = 0.17
randomness = 0.95
lifetime_randomness = 0.07
texture = ExtResource("14_qqhoh")
emission_shape = 2
emission_sphere_radius = 14.1
direction = Vector2(-50, 0)
spread = 62.3
gravity = Vector2(-50, 0)
initial_velocity_max = 201.39
angular_velocity_curve = SubResource("Curve_5afw1")
linear_accel_curve = SubResource("Curve_5lgap")
radial_accel_min = -9.72
tangential_accel_curve = SubResource("Curve_jmcir")
angle_curve = SubResource("Curve_sjosl")
scale_amount_min = 1.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_2o5ga")
color = Color(0.910115, 0.910115, 0.910115, 1)
color_ramp = SubResource("Gradient_o236b")
hue_variation_min = -0.05
hue_variation_curve = SubResource("Curve_h1iie")

[node name="landing" parent="flip" instance=ExtResource("10_q2yko")]
position = Vector2(1, 17)
frame_progress = 0.614537

[node name="animations" type="AnimatedSprite2D" parent="flip"]
modulate = Color(2, 2, 2, 1)
material = SubResource("ShaderMaterial_fnmef")
position = Vector2(-3, 9)
scale = Vector2(0.423956, 0.455889)
sprite_frames = SubResource("SpriteFrames_1at15")
animation = &"mainRun"
autoplay = "MainIdle1"

[node name="PointLight2D" type="PointLight2D" parent="flip"]
modulate = Color(1, 1, 2, 1)
material = SubResource("ShaderMaterial_xe23g")
position = Vector2(17, -92)
scale = Vector2(0.786875, 0.550701)
energy = 7.2
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 31.2
texture = ExtResource("11_gqogc")
texture_scale = 50.0

[node name="wallImpact" type="CPUParticles2D" parent="flip"]
modulate = Color(1, 1, 3, 0.976471)
position = Vector2(-2, -5)
rotation = 0.477574
emitting = false
amount = 10
lifetime = 0.5
speed_scale = 1.5
explosiveness = 0.2
randomness = 0.18
lifetime_randomness = 0.36
local_coords = true
texture = ExtResource("11_gqogc")
emission_shape = 2
emission_sphere_radius = 16.0
direction = Vector2(1, 2)
spread = 37.94
gravity = Vector2(0, 0)
initial_velocity_min = 168.42
initial_velocity_max = 256.34
linear_accel_min = -100.0
linear_accel_max = -100.0
damping_min = 6.073
damping_max = 6.073
angle_min = -57.3
angle_curve = SubResource("Curve_ts3df")
scale_amount_min = 1.5
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_qq81f")
color = Color(1, 1, 2, 1)

[node name="deathImpact" type="CPUParticles2D" parent="flip"]
emitting = false
amount = 100
one_shot = true
explosiveness = 0.12
randomness = 0.1
texture = ExtResource("14_qqhoh")
emission_shape = 2
emission_sphere_radius = 45.42
spread = 146.92
gravity = Vector2(0, 200)
initial_velocity_min = 155.25
initial_velocity_max = 210.05
scale_amount_min = 2.5
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_sv1nf")
color_ramp = SubResource("Gradient_mmbfy")
hue_variation_curve = SubResource("Curve_oodre")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="flip"]
visible = false
blend_mode = 2
height = 0.5
max_distance = 200.0

[node name="sounds" type="Node2D" parent="."]

[node name="simpleJump" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("7_3mb26")
volume_db = -25.334

[node name="footSteps" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("6_7ccnb")
volume_db = -25.0

[node name="dashSound" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("7_s7pt2")
volume_db = -16.732

[node name="running" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("8_malfi")
volume_db = -3.763

[node name="Timers" type="Node2D" parent="."]

[node name="DangleTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="StepTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="WaitTimer" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="GhostingTimer" type="Timer" parent="Timers"]
wait_time = 0.15
autostart = true

[node name="CountTimer" type="Timer" parent="Timers"]

[node name="Label" type="Label" parent="Timers/CountTimer"]
offset_left = -656.0
offset_top = -321.0
offset_right = -616.0
offset_bottom = -184.0
label_settings = SubResource("LabelSettings_cblcq")

[node name="DeathTimer" type="Timer" parent="Timers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -20)
shape = SubResource("CapsuleShape2D_8cco3")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -604.0
offset_top = -355.0
offset_right = -346.0
offset_bottom = -329.0
scale = Vector2(0.913235, 0.815819)
theme = ExtResource("12_p4byo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("12_0cawj")
theme_override_styles/background = SubResource("StyleBoxFlat_xdx1e")
theme_override_styles/fill = SubResource("StyleBoxFlat_b5omo")
max_value = 10.0
value = 5.0
rounded = true

[node name="PointLight2D" type="PointLight2D" parent="ProgressBar"]
z_index = 20
position = Vector2(129.211, 14.7091)
scale = Vector2(5.7006, 0.659193)
color = Color(0.804743, 0.804743, 0.804743, 0.956863)
energy = 0.5
texture = SubResource("GradientTexture2D_rj2gl")
texture_scale = 0.7

[node name="Control" type="Control" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
self_modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 3
anchors_preset = 0
offset_left = 26.0
offset_top = -538.0
offset_right = 66.0
offset_bottom = -498.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -10.2
anchor_top = -16.775
anchor_right = -10.2
anchor_bottom = -16.775
offset_left = -222.0
offset_top = 813.0
offset_right = 13.0
offset_bottom = 835.0
theme = ExtResource("12_p4byo")
theme_override_fonts/font = ExtResource("12_0cawj")
theme_override_styles/background = SubResource("StyleBoxFlat_2o3it")
theme_override_styles/fill = SubResource("StyleBoxFlat_op7cu")
max_value = 10.0
value = 5.0
rounded = true

[node name="PointLight2D2" type="PointLight2D" parent="Control"]
position = Vector2(-515, 154)
scale = Vector2(3.625, 0.300781)
energy = 0.8
blend_mode = 2
texture = SubResource("GradientTexture2D_rj2gl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4vdns")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-703.25, -348.938)
scale = Vector2(0.49375, 0.386719)
sprite_frames = SubResource("SpriteFrames_7yqkk")
autoplay = "default"
frame_progress = 0.481121

[node name="Camera2D" type="Camera2D" parent="." groups=["player"]]
offset = Vector2(0, -100)
zoom = Vector2(0.9, 0.9)

[node name="CountTimer1" type="Panel" parent="."]
texture_filter = 1
offset_left = -196.0
offset_top = -429.0
offset_right = 165.0
offset_bottom = -373.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_b8kdt")
script = ExtResource("19_d6q0b")

[node name="minutes" type="Label" parent="CountTimer1"]
layout_mode = 0
offset_left = 115.0
offset_right = 187.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 20
text = "00"
label_settings = SubResource("LabelSettings_vf8mi")
horizontal_alignment = 2

[node name="seconds" type="Label" parent="CountTimer1"]
layout_mode = 0
offset_left = 177.0
offset_top = -1.0
offset_right = 249.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 20
text = "00"
label_settings = SubResource("LabelSettings_vf8mi")
horizontal_alignment = 2

[node name="PointLight2D" type="PointLight2D" parent="CountTimer1"]
position = Vector2(177, 33)
scale = Vector2(5.375, 0.875)
texture = SubResource("GradientTexture2D_pd46p")

[connection signal="timeout" from="Timers/WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="Timers/GhostingTimer" to="." method="_on_ghosting_timer_timeout"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_death_timer_timeout"]
